# ftrx_swap

./: .gitignore  Anchor.toml  README.md  package.json  to_start_with
programs/ftrx_swap/: Cargo.toml
programs/ftrx_swap/src/: errors.rs  lib.rs  state.rs
programs/ftrx_swap/src/instructions/: create_simple_amm.rs  create_simple_pool.rs  mod.rs  simple_deposit_liquidity.rs  simple_swap.rs  simple_withdraw_liquidity.rs
tests/: ftrx_swap.ts  utils.ts
