[package]
name = "ftrx_swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ftrx_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.28.0", features = ["init-if-needed"] }
anchor-spl = "=0.28.0"
anchor-attribute-program="=0.28.0"
solana-program = "1.16.25"
ahash = "=0.8.6"
fixed = "=1.23.1"
half = "=2.2.1"
fixed-sqrt = "0.2.5"